[In Progress: 37] Reformatted content sass

--- a/skin/frontend/meanbee/default/css/_content.scss
+++ b/skin/frontend/meanbee/default/css/_content.scss
@@ -1,25 +1,58 @@
 /* Content Styles ================================================================= */
-.product-name { font-size: 1em; font-weight: normal; margin: 0; 
+.product-name { 
+    font-size: 1em; 
+    font-weight: normal; 
+    margin: 0;
+
     a {}
 }
 
 /* Product Tags */
-.tags-list { display: block; font-size: em(13); padding: 10px;
-    li { display: inline !important; margin: 0 4px 0 0;
+.tags-list { 
+    display: block; 
+    font-size: em(13); 
+    padding: 10px;
+
+    li { 
+        display: inline !important; 
+        margin: 0 4px 0 0;
+
         a {}
     }
 }
 
 /* Advanced Search */
 .advanced-search .form-list {
-    label { padding-right: 10px; width: 160px; }
-    .input-box, .input-range { clear: none; float: left; }
+    label { 
+        padding-right: 10px; 
+        width: 160px; 
+    }
+    .input-box, .input-range { 
+        clear: none; 
+        float: left; 
+    }
 }
 .advanced-search-amount { margin: 0 0 10px; }
-.advanced-search-summary { background: #fff6f1; border: 1px solid #e9d7c9; margin: 10px 0; padding: 10px;
-    ul { float: left; width: 49%; }
-    strong { background: url(../images/i_search_criteria.gif) no-repeat 0 3px; color: #E17C24; padding-left: 15px; }
-    p { clear: both; font-weight: bold; margin: 0; }
+.advanced-search-summary { 
+    background: #fff6f1; 
+    border: 1px solid #e9d7c9; 
+    margin: 10px 0; 
+    padding: 10px;
+
+    ul { 
+        float: left; 
+        width: 49%; 
+    }
+    strong { 
+        background: url(../images/i_search_criteria.gif) no-repeat 0 3px; 
+        color: #E17C24; 
+        padding-left: 15px; 
+    }
+    p { 
+        clear: both; 
+        font-weight: bold; 
+        margin: 0; 
+    }
 }
 
 /* CMS Home Page */
@@ -28,34 +61,82 @@
 
 /* Sitemap */
 .page-sitemap {
-    .links { margin: 0 8px -22px 0; text-align: right; }
-    .links a { position: relative; text-decoration: none; }
+    .links { 
+        margin: 0 8px -22px 0; 
+        text-align: right; 
+    }
+    .links a { 
+        position: relative; 
+        text-decoration: none; 
+    }
     .links a:hover { text-decoration: underline; }
 
     .sitemap { margin: 12px; }
     .sitemap a { color: #1b2d3b; }
     .sitemap li { margin: 3px 0; }
-    .sitemap li.level-0 { font-weight: bold; margin: 10px 0 0;}
+    .sitemap li.level-0 { 
+        font-weight: bold; 
+        margin: 10px 0 0;
+    }
     .sitemap li.level-0 a { color: #1e7ec8; }
 }
 
 /* RSS */
-.rss-title h1 { background: url(../images/i_rss-big.png) no-repeat 0 4px; padding-left: 27px; }
-.rss-table .link-rss { background-position: 0 4px; display: block; line-height: 1.55; }
+.rss-title h1 { 
+    background: url(../images/i_rss-big.png) no-repeat 0 4px; 
+    padding-left: 27px; 
+}
+.rss-table .link-rss { 
+    background-position: 0 4px; 
+    display: block; 
+    line-height: 1.55; 
+}
 /* ======================================================================================= */
 
 /* Options Tool Tip */
-.item-options dt { font-weight: bold; font-style: italic; }
-.item-options dd { padding-left: 10px; margin: 0 0 6px; }
-.truncated { cursor: help;
+.item-options dt { 
+    font-weight: bold; 
+    font-style: italic; 
+}
+.item-options dd { 
+    padding-left: 10px; 
+    margin: 0 0 6px; 
+}
+.truncated { 
+    cursor: help;
+
     a.dots { cursor: help; }
     a.details { cursor: help; }
-    .truncated_full_value { position: relative; z-index: 999;
-        .item-options { background-color: #f6f6f6; border: 1px solid #ddd; left: -99999em; padding: 8px; position: absolute; top: -99999em; width: 250px; z-index: 999; }
-        .item-options > p { font-weight: bold; text-transform: uppercase; }
+    .truncated_full_value { 
+        position: relative; 
+        z-index: 999;
+
+        .item-options { 
+            background-color: #f6f6f6; 
+            border: 1px solid #ddd; 
+            left: -99999em; 
+            padding: 8px; 
+            position: absolute; 
+            top: -99999em; 
+            width: 250px; 
+            z-index: 999; 
+        }
+        .item-options > p { 
+            font-weight: bold; 
+            text-transform: uppercase; 
+        }
     }
-    .show .item-options { left: 50%; top: -20px; }
+    .show .item-options { 
+        left: 50%; 
+        top: -20px; 
+    }
 }
-.col-left .truncated .show .item-options { left: 15px; top: 7px; }
-.col-right .truncated .show .item-options { left: -240px; top: 7px; }
+.col-left .truncated .show .item-options { 
+    left: 15px; 
+    top: 7px; 
+}
+.col-right .truncated .show .item-options { 
+    left: -240px; 
+    top: 7px; 
+}
 /* ======================================================================================= */
