--- a/skin/frontend/meanbee/default/css/_layout.scss
+++ b/skin/frontend/meanbee/default/css/_layout.scss
@@ -1,19 +1,52 @@
 /* Layout ======================================================================== */
 .wrapper { min-width: 954px; }
 .page {}
-.page-print { background: #fff; padding: 25px 30px; text-align: left; }
-.page-empty { background: #fff; padding: 20px; text-align: left; }
-.page-popup { background: #fff; padding: 25px 30px; text-align: left; }
+.page-print { 
+    background: #fff; 
+    padding: 25px 30px; 
+    text-align: left; 
+}
+.page-empty { 
+    background: #fff; 
+    padding: 20px; 
+    text-align: left; 
+}
+.page-popup { 
+    background: #fff; 
+    padding: 25px 30px; 
+    text-align: left; 
+}
 .main-container {}
-.main { margin: 0 auto; min-height: 400px; padding: 25px 25px 80px; text-align: left; width: 900px; }
+.main { 
+    margin: 0 auto; 
+    min-height: 400px; 
+    padding: 25px 25px 80px; 
+    text-align: left; 
+    width: 900px; 
+}
 
 /* Base Columns */
-.col-left { float: left; padding: 0 0 1px; width: 195px; }
-.col-main { float: left; padding: 0 0 1px; width: 685px; }
-.col-right { float: right; padding: 0 0 1px; width: 195px; }
+.col-left { 
+    float: left; 
+    padding: 0 0 1px; 
+    width: 195px; 
+}
+.col-main { 
+    float: left; 
+    padding: 0 0 1px; 
+    width: 685px; 
+}
+.col-right { 
+    float: right; 
+    padding: 0 0 1px; 
+    width: 195px; 
+}
 
 /* 1 Column Layout */
-.col1-layout .col-main { float: none; width: auto; }
+.col1-layout .col-main { 
+    float: none; 
+    width: auto; 
+}
 
 /* 2 Columns Layout */
 .col2-left-layout .col-main { float: right; }
@@ -21,78 +54,203 @@
 
 /* 3 Columns Layout */
 .col3-layout {
-    .col-main { margin-left: 17px; width: 475px; }
-    .col-wrapper { float: left; width: 687px;
+    .col-main { 
+        margin-left: 17px; 
+        width: 475px; 
+    }
+    .col-wrapper { 
+        float: left; 
+        width: 687px;
+
         .col-main { float: right; }
     }
 }
 
 /* Content Columns */
 .col2-set {
-    .col-1 { float: left; width: 48.5%; }
-    .col-2 { float: right; width: 48.5%; }
+    .col-1 { 
+        float: left; 
+        width: 48.5%; 
+    }
+    .col-2 { 
+        float: right; 
+        width: 48.5%; 
+    }
     .col-narrow { width: 32%; }
     .col-wide { width: 65%; }
 }
 
 .col3-set {
-    .col-1 { float: left; width: 32%; }
-    .col-2 { float: left; margin-left: 2%; width: 32%; }
-    .col-3 { float: right; width: 32%; }
+    .col-1 { 
+        float: left; 
+        width: 32%; 
+    }
+    .col-2 { 
+        float: left; 
+        margin-left: 2%; 
+        width: 32%; 
+    }
+    .col-3 { 
+        float: right; 
+        width: 32%;
+    }
 }
 
 .col4-set {
-    .col-1 { float: left; width: 23.5%; }
-    .col-2 { float: left; margin: 0 2%; width: 23.5%; }
-    .col-3 { float: left; width: 23.5%; }
-    .col-4 { float: right; width: 23.5%; }
+    .col-1 { 
+        float: left; 
+        width: 23.5%;
+    }
+    .col-2 { 
+        float: left; 
+        margin: 0 2%; 
+        width: 23.5%; 
+    }
+    .col-3 { 
+        float: left; 
+        width: 23.5%; 
+    }
+    .col-4 { 
+        float: right; 
+        width: 23.5%; 
+    }
 }
 /* ============================================================================== */
 
 /* Header ======================================================================== */
 .logo { float: left; }
 .header-container { 
-    .top-container { clear: both; padding: 5px 10px 0 12px; text-align: right;
-        a { color: #ebbc58; font-size: em(11); }
+    .top-container { 
+        clear: both; 
+        padding: 5px 10px 0 12px; 
+        text-align: right;
+
+        a { 
+            color: #ebbc58; 
+            font-size: em(11); 
+        }
     }
     header { 
-    margin: 0 auto; padding: 10px; position: relative; text-align: right; width: 930px; z-index: 10;
+        margin: 0 auto; 
+        padding: 10px; 
+        position: relative; 
+        text-align: right; 
+        width: 930px; 
+        z-index: 10;
     
-        .logo { float: left; margin: 3px 0 10px 12px; text-decoration: none !important;
+        .logo { 
+            float: left; 
+            margin: 3px 0 10px 12px; 
+            text-decoration: none !important;
+
             strong { 
-                font-size: 0; height: 0; left: -999em; line-height: 0; overflow: hidden; position: absolute; text-indent: -999em; top: -999em; width: 0; 
+                font-size: 0; 
+                height: 0; 
+                left: -999em; 
+                line-height: 0; 
+                overflow: hidden; 
+                position: absolute; 
+                text-indent: -999em; 
+                top: -999em; 
+                width: 0; 
             }
         }
         h1.logo { margin: 0; }
-        .quick-access { float: right; padding: 28px 10px 0 0; width: 600px; }
-        .welcome-msg { color: #fff; margin: 0; text-align: right;
+        .quick-access { 
+            float: right; 
+            padding: 28px 10px 0 0; 
+            width: 600px; 
+        }
+        .welcome-msg { 
+            color: #fff; 
+            margin: 0; 
+            text-align: right;
+
             a { color: #363636; }
         }
-        .form-search { height: 30px; padding: 1px 0 0 16px; position: absolute; right: 0; top: 0; width: 315px;
-            label { float: left; height: 21px; overflow: hidden; text-align: left; text-indent: -999em; width: 24px; }
-            input.input-text { border-color: #5c7989; float: left; margin-right: 4px; width: 209px; }
+        .form-search { 
+            height: 30px; 
+            padding: 1px 0 0 16px; 
+            position: absolute; 
+            right: 0; 
+            top: 0; 
+            width: 315px;
+
+            label { 
+                float: left; 
+                height: 21px; 
+                overflow: hidden; 
+                text-align: left; 
+                text-indent: -999em; 
+                width: 24px; 
+            }
+            input.input-text { 
+                border-color: #5c7989; 
+                float: left; 
+                margin-right: 4px; 
+                width: 209px; 
+            }
 
             button.button { float:left;
-                span { border: 0; font: bold 11px/21px Tahoma, Verdana, Arial, sans-serif; height: 21px; padding: 0 0 0 3px;
-                    span { background-position: 100% 0; padding: 0 6px 0 3px; }
+                span { 
+                    border: 0; 
+                    font: bold 11px/21px Tahoma, Verdana, Arial, sans-serif; 
+                    height: 21px; 
+                    padding: 0 0 0 3px;
+
+                    span { 
+                        background-position: 100% 0; 
+                        padding: 0 6px 0 3px; 
+                    }
                 }
             }
 
-            .search-autocomplete { left: 40px !important; top: 22px !important; z-index: 999; 
+            .search-autocomplete { 
+                left: 40px !important; 
+                top: 22px !important; 
+                z-index: 999; 
+
                 ul { border: 1px solid #5c7989; }
-                li { border-bottom: 1px solid #f4eee7; cursor: pointer; padding: 2px 8px 1px 8px; text-align: left; }
-                li .amount { float: right; font-weight: bold; }
+                li { 
+                    border-bottom: 1px solid #f4eee7; 
+                    cursor: pointer; 
+                    padding: 2px 8px 1px 8px; 
+                    text-align: left;
+                }
+                li .amount { 
+                    float: right; 
+                    font-weight: bold; 
+                }
                 li.odd { background-color: #ccc; }
                 li.selected { background-color: #eee; }
             }
         }
-        .form-language { clear: both; padding: 5px 0 0; text-align: right;
-            label { font-weight: bold; padding-right: 5px; vertical-align: middle; }
+        .form-language { 
+            clear: both; 
+            padding: 5px 0 0; 
+            text-align: right;
+
+            label { 
+                font-weight: bold; 
+                padding-right: 5px; 
+                vertical-align: middle; 
+            }
             select { padding: 0; }
-            select.flags option { background-position: 4px 50%; background-repeat: no-repeat; padding-left: 25px; }
+            select.flags option { 
+                background-position: 4px 50%; 
+                background-repeat: no-repeat; 
+                padding-left: 25px; 
+            }
         }
-        .links { float: right; margin: 0 0 6px; 
-            li { float: left; font-size: em(11); padding: 0 8px 0 7px; }
+        .links { 
+            float: right; 
+            margin: 0 0 6px; 
+
+            li { 
+                float: left; 
+                font-size: em(11); 
+                padding: 0 8px 0 7px; 
+            }
         }
     }
 }
@@ -102,23 +260,49 @@
 .footer-container {
     .bottom-container { margin: 0 0 5px; }
 }
-footer { margin: 0 auto; padding: 10px 10px 50px; text-align: center; width: 930px; 
-    .store-switcher { display: inline; margin: 0 5px 0 0;
-        label { font-weight: bold; vertical-align: middle; }
-        select { padding: 0; vertical-align: middle; }
+footer { 
+    margin: 0 auto; 
+    padding: 10px 10px 50px; 
+    text-align: center; 
+    width: 930px; 
+
+    .store-switcher { 
+        display: inline; 
+        margin: 0 5px 0 0;
+
+        label { 
+            font-weight: bold; 
+            vertical-align: middle; 
+        }
+        select { 
+            padding: 0; 
+            vertical-align: middle; 
+        }
     }
     a { text-decoration: none;
         &:hover { text-decoration: underline; }
     }
-    .bugs { color: #363636; margin: 13px 0 0;
+    .bugs { 
+        color: #363636; 
+        margin: 13px 0 0;
+
         a { text-decoration: underline;
             &:hover { text-decoration: none; }
         }
     }
-    address { color: #363636; margin: 20px 0; }
+    address { 
+        color: #363636; 
+        margin: 20px 0; 
+    }
     ul { display: inline; }
     ul.links { display: block; }
-    li { display: inline; padding: 0 7px 0 4px; }
-    li.last { background: none !important; padding-right: 0 !important; }
+    li { 
+        display: inline; 
+        padding: 0 7px 0 4px; 
+    }
+    li.last { 
+        background: none !important; 
+        padding-right: 0 !important; 
+    }
 }
 /* ============================================================================= */
